--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <span class="text-primary">Bogdanović</span>
         </h1>
         <div class="subheading mb-5">Siniše Stankovića 33 · Beograd, 11147 · (062) 575-977 ·
-          <a href="mailto:name@email.com">vladimirbogdanovic111@gmail.com</a>
+          <a href="mailto:name@email.com">vlabog1982@gmail.com</a>
         </div>
         <p class="lead mb-5">
           <div class="description" part="0"><span>
